# PQCBench

./: .gitignore  Arnab Ghosh IRR Student Jounral Submission.docx  Dockerfile  README.md
.obsidian/: app.json  appearance.json  community-plugins.json  graph.json  workspace.json
.obsidian/plugins/obsidian-minimal-settings/: data.json
.obsidian/plugins/obsidian-pandoc-reference-list/: data.json
.obsidian/plugins/obsidian-zotero-desktop-connector/: data.json
.pandoc/: zotero-library-1.json
Presentation/: Presentation.pptx
auxil/: Paper.aux  Paper.bbl  Paper.bcf  Paper.blg  Paper.run.xml  main.aux  main.blg  main.out
experiment/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake
experiment/binaries/: benchmark  eccKEM  exp.sh  kyberKEM  payload  rsaKEM
experiment/source/: benchmark.cpp  eccKEM.cpp  kyberKEM.cpp  payload.cpp  rsaKEM.cpp
obsidian/: Methods.md  Paper Outline.md  Paper.tex  library.bib  library.bib.blg
obsidian/Specific Concepts/: Cryptography.md  Diffie Hellman.md  ECC.md  KEM.md  Learning With Errors.md  Methods.md  Quantum Computing.md  RSA.md  Regev's Algorithm.md  Shor's Algorithm.md  Store Now Decrypt Later.md  Viability of Post-Quantum Cryptography.md
paper/: bibliography.bib  main-blx.bib  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.run.xml  main.tex  turabian-formatting.sty  turabian-researchpaper.cls  works-cited.bib
